# vedit

./: .gitignore  Cargo.toml  README.md
config/: example.vedit.toml
help/: help.md  help.txt
prompts/: dolrfmt.prompt  roman.prompt
src/: ai.rs  config.rs  editor.rs  main.rs  syntax.rs  ui.rs
test/: test01.txt  test02.txt  test03.txt  test04.txt
